调整浏览器标题文案

--- a/web/index.html
+++ b/web/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Deep Vision 深瞳 - 智能访谈助手</title>
+    <title>Deep Vision 深瞳</title>
     <!-- 本地化资源 - 支持内网部署 -->
     <script src="vendor/css/tailwind-full.js"></script>
     <link rel="stylesheet" href="vendor/css/fonts.css">
